--- a/crwel-friends.html
+++ b/crwel-friends.html
@@ -494,10 +494,277 @@ but that doesn't make them so sad. they had each other, and could now observe ev
 fun things and tragic things happen every day in this world. in that cruel, but so funny world.
 
 </font><br><br><br><br>
+<center><font color="#ffdb3d">.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.</font></center>
+<br><br>
+
+　　　<font color="#ffdb3d">⋆　</font><font color="#ccbdb9">ms paint :</font>
+<br><br>
 <center>
-<sub><img src="https://i.imgur.com/9a7SGTR.gif"/>
- <img src="https://i.imgur.com/h8TU8Ps.gif"/></sub>　<a href=""><font color="#ada6a6">characters</a> ( soon )</font>
+<style type="text/css">
+/*estilo da pop-up*/
+#pop0{
+position: fixed;
+top: 15%;
+left: 40%;
+font: 11px;
+margin: -75px 0 0 -150px;
+width: 405px; /*largura do coiso todo*/
+height: 430px; /*altuuuuuuura*/
+padding: 5px;
+border:1px dashed #CEB6B6;
+background: #fffcfc; /*corzinha de fundo*/
+display: none;
+z-index: 999999999999999999999; /*0 "10" faz o banner se sobre-por aos demais*/
+}
+#link-fechar0{
+color: #CEB6B6;
+}
+</style>
+
+<script type="text/javascript">
+function fecharpop0(){
+    document.getElementById('pop0').style.display = 'none';
+}
+function abrirpop0(){
+    document.getElementById('pop0').style.display = 'block';
+    setTimeout ("fecharpop0()", 999999);
+}
+</script>
+
+<div id="pop0">
+<!--coisinhas-->
+<center><div style="background-image:url(); border: 1px; overflow: auto; color: #BC9F9F; width: 405px;height: 430px; overflow-x: hidden; text-align:justify ; font-family: Verdana; font-size:10px; line-height: 10px">
+
+<div style= "padding-left: 3px;">
+　　　　　　<div style="text-align: right;"><a href="javascript: fecharpop0();" ><font color="#CEB6B6" size="1"> [ x ]</font></a>　</div>
+<br>
+<center><img src="https://i.imgur.com/GJHwH9N.png"></center>
+</div>
+</div>
+</div>
+</center>
+<!--coisinhas-->
+</center>
+
+
+
+<center>
+<style type="text/css">
+/*estilo da pop-up*/
+#pop1{
+position: fixed;
+top: 15%;
+left: 40%;
+font: 11px;
+margin: -75px 0 0 -150px;
+width: 355px; /*largura do coiso todo*/
+height: 375px; /*altuuuuuuura*/
+padding: 5px;
+border:1px dashed #CEB6B6;
+background: #fffcfc; /*corzinha de fundo*/
+display: none;
+z-index: 999999999999999999999; /*0 "10" faz o banner se sobre-por aos demais*/
+}
+#link-fechar1{
+color: #CEB6B6;
+}
+</style>
+
+<script type="text/javascript">
+function fecharpop1(){
+    document.getElementById('pop1').style.display = 'none';
+}
+function abrirpop1(){
+    document.getElementById('pop1').style.display = 'block';
+    setTimeout ("fecharpop1()", 999999);
+}
+</script>
+
+<div id="pop1">
+<!--coisinhas-->
+<center><div style="background-image:url(); border: 1px; overflow: auto; color: #BC9F9F; width: 355px;height: 375px; overflow-x: hidden; text-align:justify ; font-family: Verdana; font-size:10px; line-height: 10px">
+
+<div style= "padding-left: 3px;">
+　　　　　　<div style="text-align: right;"><a href="javascript: fecharpop1();" ><font color="#CEB6B6" size="1"> [ x ]</font></a>　</div>
+<br>
+<center><img src="https://i.imgur.com/Y0emjrX.png"></center>
+</div>
+</div>
+</div>
+</center>
+<!--coisinhas-->
+</center>
+
+
+
+　　　　<a href="javascript: abrirpop0();"><img width="70" height="70" src="https://i.imgur.com/GJHwH9N.png"></a> <a href="javascript: abrirpop1();"><img width="70" height="70" src="https://i.imgur.com/Y0emjrX.png"></a>
+
+
+
 <br><br><br><br>
+　　　<font color="#ffdb3d">⋆　</font><a href="https://middlepot.com/drawing" target="_blank"><font color="#ccbdb9">my drawing tool</a> :</font>
+<br><br>
+<center>
+<style type="text/css">
+/*estilo da pop-up*/
+#popp0{
+position: fixed;
+top: 15%;
+left: 40%;
+font: 11px;
+margin: -75px 0 0 -150px;
+width: 355px; /*largura do coiso todo*/
+height: 360px; /*altuuuuuuura*/
+padding: 5px;
+border:1px dashed #CEB6B6;
+background: #fffcfc; /*corzinha de fundo*/
+display: none;
+z-index: 999999999999999999999; /*0 "10" faz o banner se sobre-por aos demais*/
+}
+#link-fechar0p{
+color: #CEB6B6;
+}
+</style>
+
+<script type="text/javascript">
+function fecharpopp0(){
+    document.getElementById('popp0').style.display = 'none';
+}
+function abrirpopp0(){
+    document.getElementById('popp0').style.display = 'block';
+    setTimeout ("fecharpopp0()", 999999);
+}
+</script>
+
+<div id="popp0">
+<!--coisinhas-->
+<center><div style="background-image:url(); border: 1px; overflow: auto; color: #BC9F9F; width: 355px;height: 360px; overflow-x: hidden; text-align:justify ; font-family: Verdana; font-size:10px; line-height: 10px">
+
+<div style= "padding-left: 3px;">
+　　　　　　<div style="text-align: right;"><a href="javascript: fecharpopp0();" ><font color="#CEB6B6" size="1"> [ x ]</font></a>　</div>
+<br>
+<center><img src="https://i.imgur.com/Sgrer6m.png"></center>
+</div>
+</div>
+</div>
+</center>
+<!--coisinhas-->
+</center>
+
+
+
+<center>
+<style type="text/css">
+/*estilo da pop-up*/
+#popp1{
+position: fixed;
+top: 15%;
+left: 40%;
+font: 11px;
+margin: -75px 0 0 -150px;
+width: 325px; /*largura do coiso todo*/
+height: 345px; /*altuuuuuuura*/
+padding: 5px;
+border:1px dashed #CEB6B6;
+background: #fffcfc; /*corzinha de fundo*/
+display: none;
+z-index: 999999999999999999999; /*0 "10" faz o banner se sobre-por aos demais*/
+}
+#link-fechar1p{
+color: #CEB6B6;
+}
+</style>
+
+<script type="text/javascript">
+function fecharpopp1(){
+    document.getElementById('popp1').style.display = 'none';
+}
+function abrirpopp1(){
+    document.getElementById('popp1').style.display = 'block';
+    setTimeout ("fecharpopp1()", 999999);
+}
+</script>
+
+<div id="popp1">
+<!--coisinhas-->
+<center><div style="background-image:url(); border: 1px; overflow: auto; color: #BC9F9F; width: 325px;height: 345px; overflow-x: hidden; text-align:justify ; font-family: Verdana; font-size:10px; line-height: 10px">
+
+<div style= "padding-left: 3px;">
+　　　　　　<div style="text-align: right;"><a href="javascript: fecharpopp1();" ><font color="#CEB6B6" size="1"> [ x ]</font></a>　</div>
+<br>
+<center><img src="https://i.imgur.com/1LwiYm5.png"></center>
+</div>
+</div>
+</div>
+</center>
+<!--coisinhas-->
+</center>
+
+
+
+　　　　<a href="javascript: abrirpopp0();"><img width="70" height="70" src="https://i.imgur.com/Sgrer6m.png"></a> <a href="javascript: abrirpopp1();"><img width="70" height="70" src="https://i.imgur.com/1LwiYm5.png"></a>
+
+<br><br><br>
+
+<center><font color="#ffdb3d">.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.</font></center>
+
+<br><br><br>
+<center>
+
+<style>
+p { margin: 0; }
+.spoiler-area {
+
+}
+.spoiler-area.is-closed { height: 0; overflow: hidden; padding: 10px 0 0; }
+</style>
+</head>
+<body>
+
+<sub><img src="https://i.imgur.com/9a7SGTR.gif"/> <img src="https://i.imgur.com/h8TU8Ps.gif"/></sub>　<font color="#ada6a6" size="1"><a data-target="spoiler1" class="btn-spoiler" id="link1">characters +</a></font>
+<div id="spoiler1" class="spoiler-area is-closed">
+<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+<br><br>
+<table style="border-spacing: 5px;">
+<tr>
+<td><img width="170px" height="auto" src="https://i.imgur.com/s1t9kvN.png"/> </td>
+<td><font color="#d8c8a2" size="1">hunny bear</font><br><br><div style="font-size:8px"><font color="#b5a394">he's the best friend of the smartest<br>teddy bear</font></div></td>
+</tr>
+</table>
+
+</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+
+<script>
+(function(){
+    "use strict";
+    var $btns = document.querySelectorAll('.btn-spoiler');
+    function loop($els, cb) {
+        var i = $els.length;
+        while(i--) {
+            cb($els[i]);
+        }
+    }
+    loop($btns, function($btn){
+        $btn.addEventListener("click", function(){
+            var $spoiler = document.getElementById(this.getAttribute("data-target"));
+            if( this.innerHTML === "characters +" ){
+                this.innerHTML = "characters -";
+                $spoiler.classList.remove("is-closed");
+            } else {
+                this.innerHTML = "characters +";
+                $spoiler.classList.add("is-closed");
+            }
+        });
+
+    });
+
+}());
+</script>
+</center>
+
+
+
+<br><br><br><br><center>
 <img src="https://i.imgur.com/t9dI00o.gif"/>　<img src="https://i.imgur.com/t9dI00o.gif"/>　<img src="https://i.imgur.com/t9dI00o.gif"/>　<img src="https://i.imgur.com/t9dI00o.gif"/>　<img src="https://i.imgur.com/t9dI00o.gif"/>
 </center>
 <br>
