--- a/status.html
+++ b/status.html
@@ -398,6 +398,26 @@ p { margin: 0; }
 
 <!-- STAAAAAAAAAAAAAAAAAAAAATUSSSSSSSSSSSSSSSSSSSSSSSSSS -->
 <div style="text-align: left;"><br><br>
+　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">07.05.18</font>
+<body>
+<div style="float: right;">
+<style>
+yay { cursor: pointer; }
+</style>
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_s2941852109033_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s29418521090233_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=11R1_sQLPu-MY_IfnqoUUYF2E-GT0_xKp"></script>
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_s2941852109233_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s29418521092333_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=18exhoVW3wI7uYGp33vxkFSYelpt-u2hw"></script>
+</font></font>
+</div>
+</body>
+
+<br><br>
+　　<font color="#815B5B">thank you so much for your support ♡ !</font>
+<br><br>
+<div style="text-align: left;"><br><br>
 　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">06.26.18</font>
 <body>
 <div style="float: right;">
@@ -576,26 +596,6 @@ yay { cursor: pointer; }
 
 <br><br>
 　　<font color="#815B5B">aaaa ♡ !!! i love him</font>
-<br><br><br>
-<div style="text-align: left;"><br><br>
-　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">04.12.18</font>
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109033_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s29418521090233_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=11R1_sQLPu-MY_IfnqoUUYF2E-GT0_xKp"></script>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109233_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s29418521092333_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=18exhoVW3wI7uYGp33vxkFSYelpt-u2hw"></script>
-</font></font>
-</div>
-</body>
-
-<br><br>
-　　<font color="#815B5B">never ever forget to love ♡ ♡ ♡</font>
 <br><br>
 <!-- STAAAAAAAAAAAAAAAAAAAAATUSSSSSSSSSSSSSSSSSSSSSSSSSS -->
 
