--- a/moep.html
+++ b/moep.html
@@ -483,13 +483,15 @@ let's get to know them with this quick introduction :
 　　　　　　<font color="#d1b3b3">she doesn't care.<br>　　　　　　where are her glasses ?<br>　　　　　　don't think fast, but think very well.<br>　　　　　　loves insects.<br>　　　　　　from time to time she gives a touch of adjustment.</font>
 <br><br>
 <br><br>
-<font color="#d1b9b1"><font size="2">※ </font>i like to use flandre scarlet in my moeP accounts because her cute + violent personality is well compatible with the music style i would like to use in this project !</font>
+<font color="#d1b9b1"><font size="2">※ </font>i like to use flandre scarlet in my moeP accounts because her cute + dangerous personality is well compatible with the music style i would like to use in this project !</font>
 <br><br><br><br><br>
 
 <style>
 #link1 { color: #DFCFDB; border-bottom:1px solid #D7C4C4; }
 #link2 { color: #fcaeae; border-bottom:1px solid #D7C4C4; }
 #link3 { color: #DADAE9; border-bottom:1px solid #D7C4C4; }
+#link4 { color: #ffe08c; border-bottom:1px solid #D7C4C4; }
+#link5 { color: #ffc4c4; border-bottom:1px solid #D7C4C4; }
 </style>
 <center>
 <div style="font-size: 10px;">
@@ -497,6 +499,10 @@ let's get to know them with this quick introduction :
 </div><br>
 <div style="font-size: 10px;">
 <font face="verdana">
+<font face="verdana" color="#e89d9d">⁽ ³ ⁺ ¹ ⁾</font> <a title="#lucky vacuum" href="https://files.catbox.moe/lskn1r.mp3" id="link5" target="_blank">my ❤１００％ for u .mp3</a><br>
+<br>
+<font face="verdana" color="#edd18b">⁽ ³ ⁺ ⁴ ⁾</font> <a title="#initial p" href="https://files.catbox.moe/w96wkd.mp3" id="link4" target="_blank">⋆☆﻿✩﻿☆✩﻿☆﻿⋆ .mp3</a><br>
+<br>
 <font face="verdana" color="#D7C7D3">⁽ ³ ⁺ ⁴ ⁾</font> <a title="#mlp:fim #max steroid" href="https://files.catbox.moe/cad76r.mp3" id="link1" target="_blank">so, what do you think ? .mp3</a><br>
 <br>
 <font face="verdana" color="#EEB3B3">⁽ ³ ⁺ ¹ ⁾</font> <a title="#mlp:fim #sota fujimori" href="https://files.catbox.moe/7bxbu0.mp3" id="link2" target="_blank">U・ω・ROCK .mp3</a><br>
