--- a/look-book.html
+++ b/look-book.html
@@ -419,6 +419,33 @@ p { margin: 0; }
 <center>
 
 <br><br>
+<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 07.12.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
+<img width="220px" height="auto" src="https://i.imgur.com/Qe3RaGr.png"/><br>
+<br><br>
+
+
+
+<center>
+<body>
+<style>
+yay { cursor: pointer; }
+</style>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_li2941852109066_"><sub><sub><img width="16px" height="auto" src="https://i.imgur.com/ecgki0o.gif"/></sub></sub></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_li29418521090266_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1DuWzbc-BbKjQ0Xc4rrU7CU-VEMWcZeci"></script>
+</div>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_li2941852109266_"><sub><sub><img width="16px" height="auto" src="https://i.imgur.com/tymmGmT.gif"/></sub></sub></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_li29418521092366_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1L9dIaizPvvYq7gJ51wHUo2hIY-ND5zoB"></script>
+</div>
+</font></font>
+</body>
+</center>
+
+
+<br><br><br><br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 06.19.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
 <img width="220px" height="auto" src="https://i.imgur.com/raiAd1e.png"/><br>
 <br><br>
@@ -653,33 +680,6 @@ yay { cursor: pointer; }
 <font family = "Tahoma"><font color="#997C7C">
 <yay><a id="_li2941852109277_"><sub><sub><img width="16px" height="auto" src="https://i.imgur.com/tymmGmT.gif"/></sub></sub></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_li29418521092377_"></span>&nbsp; } &nbsp;</p>
 <script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1mDV9s-XHX9iXiukJjZ4V7ZOpCVawQ33p"></script>
-</div>
-</font></font>
-</body>
-</center>
-
-
-<br><br><br><br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 01.03.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/WUfHWhZ.png"/><br>
-<br><br>
-
-
-
-<center>
-<body>
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_li2941852109066_"><sub><sub><img width="16px" height="auto" src="https://i.imgur.com/ecgki0o.gif"/></sub></sub></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_li29418521090266_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1DuWzbc-BbKjQ0Xc4rrU7CU-VEMWcZeci"></script>
-</div>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_li2941852109266_"><sub><sub><img width="16px" height="auto" src="https://i.imgur.com/tymmGmT.gif"/></sub></sub></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_li29418521092366_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1L9dIaizPvvYq7gJ51wHUo2hIY-ND5zoB"></script>
 </div>
 </font></font>
 </body>
