--- a/status.html
+++ b/status.html
@@ -398,6 +398,26 @@ p { margin: 0; }
 
 <!-- STAAAAAAAAAAAAAAAAAAAAATUSSSSSSSSSSSSSSSSSSSSSSSSSS -->
 <div style="text-align: left;"><br><br>
+　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">07.15.18</font>
+<body>
+<div style="float: right;">
+<style>
+yay { cursor: pointer; }
+</style>
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_s2941852109044_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s29418521090244_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1XPDda-5u3_ePxSAuWvn5QjX2tl1HAV5e"></script>
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_s2941852109244_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s29418521092344_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1rYi5gdRfAlh3iX-4PXZSqdeJqqT2p98a"></script>
+</font></font>
+</div>
+</body>
+
+<br><br>
+　　<font color="#815B5B">♡ pão de queijo + coffee ♡</font>
+<br><br>
+<div style="text-align: left;"><br><br>
 　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">07.05.18</font>
 <body>
 <div style="float: right;">
@@ -576,26 +596,6 @@ yay { cursor: pointer; }
 
 <br><br>
 　　<font color="#815B5B">i will do my best, always !!!</font>
-<br><br>
-<div style="text-align: left;"><br><br>
-　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">04.19.18</font>
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109044_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s29418521090244_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1XPDda-5u3_ePxSAuWvn5QjX2tl1HAV5e"></script>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109244_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s29418521092344_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1rYi5gdRfAlh3iX-4PXZSqdeJqqT2p98a"></script>
-</font></font>
-</div>
-</body>
-
-<br><br>
-　　<font color="#815B5B">aaaa ♡ !!! i love him</font>
 <br><br>
 <!-- STAAAAAAAAAAAAAAAAAAAAATUSSSSSSSSSSSSSSSSSSSSSSSSSS -->
 
