--- a/archive.html
+++ b/archive.html
@@ -351,6 +351,138 @@ overflow-x:hidden;
 font-family: Verdana;">
 
 <br>
+<center><img src="https://i.imgur.com/uMLLLui.gif"/><img src="https://i.imgur.com/eT7VFAV.gif"/><img src="https://i.imgur.com/1yUhsrQ.gif"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>june . 01 . 2018</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <img src="https://i.imgur.com/nxkJ7zP.gif"/><br>
+where do you live, is it getting hot or cold ?<br>
+here is a super nice climate, a gentle cold, soft sunlight + the rains have stopped completely. it's my favorite weather season !!<br>
+for those who remember the past post, my trip with bubu was magical, i would like to travel with him all the time ♡ ♡ ♡<br>
+it's not usual for me to travel, i sometimes spend years without leaving nearby. i want to travel a lot in the future <img src="https://i.imgur.com/V6FLtp7.gif"/><br>
+<br>
+i made two new playlists recently and would like to comment on them because i think they are interesting !<br>
+i made a playlist with only brazilian music, since i was born and live here ( in são paulo ). i decided to do it because i know that the brazilian culture is extremely diverse and yet stereotyped. it's a country with a diversity of immigrants, so people don't usually know much about many super nice things that are from here. if you think of brazilian music you will definitely think of samba, but i do not particularly like it, as well as many people here.<br>
+in this playlist i put together some popular music that everyone knows here and that were part of my childhood, only music i like and listen until nowadays !<br>
+most of them are from the 80s and 90s, but these are the ones i really like. i think currently music here is not good at all ...<br>
+but i would like to talk more about brazil, things that i love here and things that i consider terrible, the changes as the decades went by and my plans for the future,,, in another post ( spoiler : i do not intend to live here forever ).<br>
+well, i hope you like the songs because they are great and very special for me ! i'll add more as you like.<br>
+<br>
+the other playlist that i would like to talk about is the asmr one. it's a playlist i've been thinking about for some time, since i usually watch a lot of asmr channels that are not very well known and many videos that i like are asmr not intentional. you will find all kind of stimmy and aesthetically pleasing videos !<br>
+most videos are from japanese and korean channels, but some videos are in english and portuguese.<br>
+i hope this playlist will help you relax and discover new content !!<br>
+maybe you can even learn to make some recipes <sub><sub><img src="https://i.imgur.com/Jdce4lV.gif"/></sub></sub><br>
+<br><br>
+<center>
+<iframe width="350" height="196" src="https://www.youtube.com/embed/videoseries?list=PLsBmCEP2InOp69wlTeQKg7GnB2EG5apxD" frameborder="0" allowfullscreen></iframe>
+</center>
+<br>
+</font></font></font>
+<br>
+<center>
+<body>
+<style>
+yay { cursor: pointer; }
+</style>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/UKhQauT.gif"/>&nbsp;&nbsp; { &nbsp;1496&nbsp; } &nbsp;
+</font></font>
+</div>
+</body>
+<body>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/EL39DaW.gif"/>&nbsp;&nbsp; { &nbsp;1&nbsp; } &nbsp;
+</font></font>
+</div>
+</body></center>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+please let me know what you think of it, i accept suggestions !<br>
+<br>
+i also want to leave here a drawing that i painted recently and i am quite proud :<br>
+<br><br>
+
+<center><img width="350px" height="auto" src="https://i.imgur.com/z8UUDdB.png"/></center>
+</font></font></font>
+<br>
+<center>
+<body>
+<style>
+yay { cursor: pointer; }
+</style>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/kfD2kLD.gif"/>&nbsp;&nbsp; { &nbsp;1503&nbsp; } &nbsp;
+</font></font>
+</div>
+</body>
+<body>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/ft0nNbC.gif"/>&nbsp;&nbsp; { &nbsp;0&nbsp; } &nbsp;
+</font></font>
+</div>
+</body></center>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+these drawings are so lovely !! her name is julie ♡<br>
+i really enjoyed painting the little flowers on the dress, it was very relaxing.<br>
+<br>
+today i decided to answer to you several doubts and curiosities related to the changes that have happened in my social media over the last years.<br>
+<br><br>
+<center><img src="https://i.imgur.com/d81T42M.gif"/>　<b>q & a</b>　<img src="https://i.imgur.com/gCof63R.gif"/></center>
+<br><br>
+　　　𝚖𝚊𝚒𝚗 𝚙𝚊𝚐𝚎 𝚊𝚗𝚍 𝚝𝚞𝚖𝚋𝚕𝚛 𝚋𝚕𝚘𝚐 𝚊𝚎𝚜𝚝𝚑𝚎𝚝𝚒𝚌 𝚌𝚑𝚊𝚗𝚐𝚎𝚜 _<br>
+i created the page with a friend and the tumblr blog later, in order to improve the content of the page, improving its aesthetics. the problem is that our opinions were very different and she posted things very different from me, so everything was a mess. so far so good, but the biggest problem was that she liked to post things from kink blogs and lots of offensive stuff that i think it's very bad and ruined the page environment completely. our friendship dissolved over time ( not only because of that ) and she decided she didn't want to post on the page or tumblr anymore for lack of time, so i erased all the content that i definitely hate and left everything clean and neat again. posting alone i could have control over the content quality and aesthetics. i hope that everything has been completely deleted, i'm very ashamed of this past. if you find anything, PLEASE let me know !<br>
+<br>
+　　　𝚝𝚑𝚎 𝚏𝚊𝚗 𝚙𝚒𝚌 𝚍𝚊𝚢 _<br>
+who knows the not bad page since its beginning remembers that saturday was a day where i posted pictures from followers. the intention was to post beautiful pics that matched the aesthetics of the page, but things didn't go very well.. saturday became a very annoying day, people only sent super edited selfies and poor quality pics, even super inappropriate ones. and if i didn't post those pics, people would get really mad at me and keep spamming more and more photos every day !! of course one day my patience was over and i had to end it. i deleted all the pictures.<br>
+<br>
+　　　𝚖𝚒𝚍𝚍𝚕𝚎𝚙𝚘𝚝 𝚙𝚊𝚐𝚎 𝚌𝚘𝚗𝚝𝚎𝚗𝚝 _<br>
+this page was made to post my personal stuff + things that inspire me. it was before i started making this website, it was my last chance to use a social media as a personal space and of course it wasn't a good idea because it's facebook, even if a fb page, it's still fb, and i don't like it at all, i just like to post aesthetics there. i wasn't able to post my stuff properly, only images ! so, i gived up in a few months, and stopped posting everything personal, even images. i started making this website, and continued posting art that inspire me on this page, because it's still nice to post and people can get inspired too ! i really like to spread the art of talented people.<br>
+<br>
+<style type="text/css">
+#uhhh { color: #d8bcbc; }
+</style>
+　　　𝚒𝚗𝚜𝚝𝚊𝚐𝚛𝚊𝚖 𝚙𝚛𝚘𝚋𝚕𝚎𝚖𝚜 _<br>
+this story is quite complicated and people are always doing theories and <a id="uhhh" href="https://i.imgur.com/PsOlNuM.png" target="_blank">posting</a> <a id="uhhh" href="https://i.imgur.com/I4WhevB.png" target="_blank">screenshots</a> <a id="uhhh" href="https://i.imgur.com/rm1AqD9.png" target="_blank">about</a> <a id="uhhh" href="https://i.imgur.com/O5ETyMe.png" target="_blank">it</a>.. i think it's time to say what really happened to my ig : i used my acc for a short six months ( approximately ), problems began to happen at three months, i couldn't stop following people or following more people, my acc was frozen for about a month like this. i ignored it, but then i could no longer comment, they just vanished. then things started to get really heavy : my pics were erased randomly. sometimes it took a few days, a few hours, sometimes it was instantaneous, it would always disappear. i was already with many followers to that point, i was losing many because my account was becoming a mess. i was upset and contacted the instagram countless times, until one day they said that my account had been hacked. they did nothing about it really so i changed the password several times, but the problem persisted, random comments and pics were erased all the time. i always put the link of my ig on fb pages, so i had many followers, but when i started to suspect the activities i told everyone to stop following me because i would make another account, so i lost a massive number of followers ( i don't know if this was really the cause of the loss of followers because it was really a lot ). i deleted most of the pics, i left only 15 there and i didn't use the acc anymore. i decided not to make another account at all because of the problems and how nobody did anything to help me. the acc is still there until today.<br>
+<br>
+<br>
+are we clear now ? i hope so !<br>
+<br>
+<br>
+xoxo　<sub><sub><sub><img src="https://i.imgur.com/6KiUryn.gif"/></sub></sub></sub> <img src="https://i.imgur.com/l2sRCQ5.gif"/><br>
+<br><br>
+</font></font></font>
+<br>
+
+<body>
+<div style="float: right;">
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/lMakBs6.gif"/>&nbsp;&nbsp; { &nbsp;1488&nbsp; } &nbsp;
+</div>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/Ky2Z5py.gif"/>&nbsp;&nbsp;{ &nbsp;1&nbsp; } &nbsp;
+</div>
+</font></font>
+</div>
+</body>
+<br><br><br><br><br><br><br>
+
+<center><img src="https://i.imgur.com/uMLLLui.gif"/><img src="https://i.imgur.com/eT7VFAV.gif"/><img src="https://i.imgur.com/1yUhsrQ.gif"/></center>
+
+<br><br><br>
+
+<br>
 <center><img src="https://i.imgur.com/GwbPvXi.gif"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
