--- a/milky-woods.html
+++ b/milky-woods.html
@@ -517,16 +517,16 @@ click to play !
 <br><br>
 <table style="border-spacing: 5px;">
 <tr>
+<td><a href="https://middlepot.com/bunnyshop"><img height="auto" width="100" src="https://i.imgur.com/Beri781.gif"/></a> </td>
 <td><a href="https://middlepot.com/honeytime"><img height="auto" width="100" src="https://i.imgur.com/mytMMb1.png"/></a> </td>
+</tr>
+<tr>
 <td><a href="https://middlepot.com/softdesserts"><img height="auto" width="100" src="https://i.imgur.com/iUrLxM9.png"/></a> </td>
+<td><a href="https://middlepot.com/bearcare"><img height="auto" width="100" src="https://i.imgur.com/P0EEhNz.png"/></a> </td>
 </tr>
 <tr>
-<td><a href="https://middlepot.com/bearcare"><img height="auto" width="100" src="https://i.imgur.com/P0EEhNz.png"/></a></td>
 <td><a href="https://middlepot.com/drawing"><img height="auto" width="100" src="https://i.imgur.com/4Zbb69y.png"/></a> </td>
-</tr>
-<tr>
 <td><a href="https://middlepot.com/jumpjump"><img height="auto" width="100" src="https://i.imgur.com/T9HOVZQ.png"/></a> </td>
-<td></td>
 </tr>
 </table>
 
