--- a/status.html
+++ b/status.html
@@ -347,7 +347,7 @@ position: relative;
 <center><img src="https://i.imgur.com/Bm18E8o.gif"></center><br>
 <center><font color="#B49797">{ status }</font></center>
 <br>
-<center><font color="#A07777">feeling: </font><font color="#E67474">assertive </font><img src="https://i.imgur.com/sLyAV25.gif"></center>
+<center><font color="#A07777">feeling: </font><font color="#E67474">totally in love </font><img src="https://i.imgur.com/8ow5cKb.gif"></center>
 
 <br><br>
 <center><img src="https://i.imgur.com/kN7ZWlR.png"><center><br><br><br><style>
@@ -397,6 +397,26 @@ p { margin: 0; }
 
 
 <!-- STAAAAAAAAAAAAAAAAAAAAATUSSSSSSSSSSSSSSSSSSSSSSSSSS -->
+<div style="text-align: left;"><br><br>
+　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">07.25.18</font>
+<body>
+<div style="float: right;">
+<style>
+yay { cursor: pointer; }
+</style>
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_s2941852109055_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s29418521090255_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1z2myiqJk475GXK1QLSmW1V-CH9uzQZme"></script>
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_s2941852109255_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s29418521092355_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1Mqdykr4SY2ERKJYQXEcXrp113c9FNvhy"></script>
+</font></font>
+</div>
+</body>
+
+<br><br>
+　　<font color="#815B5B">i love him i love him I LOVE HIM SO MUCH</font>
+<br><br>
 <div style="text-align: left;"><br><br>
 　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">07.15.18</font>
 <body>
@@ -576,26 +596,6 @@ yay { cursor: pointer; }
 
 <br><br>
 　　<font color="#815B5B">♡ five ♡ years ♡</font>
-<br><br>
-<div style="text-align: left;"><br><br>
-　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">04.26.18</font>
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109055_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s29418521090255_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1z2myiqJk475GXK1QLSmW1V-CH9uzQZme"></script>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109255_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s29418521092355_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1Mqdykr4SY2ERKJYQXEcXrp113c9FNvhy"></script>
-</font></font>
-</div>
-</body>
-
-<br><br>
-　　<font color="#815B5B">i will do my best, always !!!</font>
 <br><br>
 <!-- STAAAAAAAAAAAAAAAAAAAAATUSSSSSSSSSSSSSSSSSSSSSSSSSS -->
 
